fix alignment & code tidy
* Allow circular-dependency-plugin to work on Windows
* Tidy
* Fix typo
* e2e test: bring back necessary wait
* Try to fix graphiql e2e test flakiness
* Revert some unwanted changes from #861
* Fix tree/table view alignment issues
* Update changelog

--- a/src/styles/cylc/_tree.scss
+++ b/src/styles/cylc/_tree.scss
@@ -81,6 +81,8 @@ $visible-outputs: 5;
     }
 
     .c-task, .c-job {
+      display: flex;
+      align-items: center;
       font-size: 1.2em;
     }
   }
